2003-12-17  Carl Worth  <cworth@east.isi.edu>

	* src/pixman.h: Remove trailing commas from enum, (some compilers
	like to complain about this).

2003-12-12  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* src/Makefile.am: Remove LIBPIXMAN_CFLAGS/LIBS cruft.
	(libpixman_la_SOURCES): slim_export.h slim_import.h gone.

2003-12-12  Carl Worth  <cworth@east.isi.edu>

	* src/pixman.h: Fold contents of slim_export/import.h directly
	into this file to avoid dependence on external slim package.

	* src/icint.h:
	* src/pixregionint.h: Use quote-based include now that
	slim_internal is an internal file.
	
	* src/icint.h: Follow convention of other files for
	multi-inclusion guard (_IC_INT_H_)
	

	* configure.in: Remove cruft.

2003-12-10  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* update.pl: fixes for wrong order of renames

	* src/pixregion.c, src/pixman.h, src/ictri.c, src/ictrap.c, src/icimage.c, src/icformat.c, src/ic.c:
	Correct some more renames where the order of the renaming
	caused later renames to fail due to earlier prefixes failing.

	* update.pl: Add rename fixes

	* src/pixregionint.h, src/pixregion.c, src/pixman.h, src/ictri.c, src/ictrap.c, src/ictransform.c, src/icrect.c, src/icpixels.c, src/icint.h, src/icimage.h, src/icimage.c, src/icformat.c, src/iccompose.c, src/iccolor.c:
	Correct over-eager renames of the form pixman_thing_tName into
	pixman_thing_name.  It was inevitable really this would happen!

	* update.pl: Added helper script for updating names in source.

	* src/pixregionint.h, src/pixregion.c, src/pixman.h, src/icutil.c, src/ictri.c, src/ictrap.c, src/ictransform.c, src/icstipple.c, src/icrop.h, src/icrect.c, src/icpixels.c, src/icint.h, src/icimage.h, src/icimage.c, src/icformat.c, src/iccompose.c, src/iccolor.c, src/icbltone.c, src/icblt.c, src/ic.c:
	Rename exported Ic* and PixRegion* functions, types, enums
	to be prefixed pixman (or PIXMAN for enum values)

	* libpixman.pc.in, README: libpixman is the pixel manipulation library
